nav done, primary button with hover done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <!-- navigation code here -->
-  <header>
+
     <div class="row">
       <div class="col col-1-of-1">
         <h1>SpaceWalkers</h1>
@@ -32,8 +32,9 @@
           </ul>
         </nav>
       </div>
+      <img src="img/main-header.png" alt="Space, Main Header">
     </div>
-  </header>
+
 
   <div class="container home">
 
@@ -75,7 +76,7 @@
           and my thumb blotted out the planet Earth.</p>
 
         <div class="btn">
-          Sign Up
+          <a href="#">Sign Up</a>
         </div>
       </div>
 
