@media @mobile added to content

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
 
+  <div class="content-wrapper">
   <!-- navigation code here -->
 
     <div class="row">
@@ -32,7 +33,7 @@
           </ul>
         </nav>
       </div>
-      <img src="img/main-header.png" alt="Space, Main Header">
+      <img src="img/main-header.png" alt="Space, Main Header" class="main-header-img">
     </div>
 
 
@@ -91,6 +92,8 @@
     </footer>
 
   </div>
+
+</div> <!--Content Wrapper Ends Here-->
 </body>
 
 </html>
