--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="walk-img">
-        <img src="img/space-walk.png" alt="Space walking astronaut">
+        <img src="img/space-walk.png" class="spacewalk" alt="Space walking astronaut">
       </div>
 
     </section>
