--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#"> Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="#">Sign In</a></li>
           </ul>
         </nav>
